Need to fix about section alignement

--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ nav {
 }
 section {
   padding: 96px 16px 0px 16px;
-  /* height: 100vh; */
+  height: 100vh;
 }
 
 .introduction {
